--- a/assignment2/html/type.html
+++ b/assignment2/html/type.html
@@ -6,7 +6,7 @@
 
   <title>Title of project</title>
 
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
   <!-- Including jQuery by default -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -16,7 +16,7 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
 
   <!-- We include our own script file(s) -->
-  <script src="js/script.js" content="text/javascript"></script>
+  <script src="../js/type.js" content="text/javascript"></script>
 
 </head>
 
