--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -38,7 +38,7 @@ Description of project and purpose of HTML
 <!-- <img src="img/water.png" id="test1"> -->
 <p>As you go through this site, you will come across challenges that will help you to understand
   the tip of the iceberg formally known as identity.</p>
-<button id="typebutt">Start your journey</button>
+<a href="html/talk.html"><button id="typebutt">Start your journey</button></a>
 
 </div>
 
