--- a/assignment2/html/gain.html
+++ b/assignment2/html/gain.html
@@ -17,7 +17,7 @@
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
-  <script src="../js/drag.js" content="text/javascript"></script>
+  <script src="../js/gain.js" content="text/javascript"></script>
 
 </head>
 
@@ -26,8 +26,9 @@
 <body>
 
   <input type="checkbox" name="animal" value="Cat" />Cats <br />
-                         <input type="checkbox" name="animal" value="Dog" />Dogs<br />
-                         <input type="checkbox" name="animal" value="Bird" />Birds<br />
+  <input type="checkbox" name="animal" value="Dog" />Dogs<br />
+  <input type="checkbox" name="animal" value="Bird" />Birds<br />
+  <button id="gain">gain
 </body>
 
 </html>
