Fixing the functions on the pages
Making sure the functions work before adding more images and styling

--- a/assignment2/html/gain.html
+++ b/assignment2/html/gain.html
@@ -24,11 +24,12 @@
 
 
 <body>
-
+<div>
   <input type="checkbox" name="animal" value="Cat" />Cats <br />
   <input type="checkbox" name="animal" value="Dog" />Dogs<br />
   <input type="checkbox" name="animal" value="Bird" />Birds<br />
-  <button id="gain">gain
+  <a href="drag.html"><button id="button">Good work!</button></a>
+</div>
 </body>
 
 </html>
