--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -29,10 +29,10 @@
 
 <body>
 
-  <div id="command">The nice thing to say when someone does something nice</div>
-  <button> Listen </button>
-  <a href="type.html"><button id="well">well</button></a>
-
+  <div id="command">The nice thing to say when someone does something nice
+  <button id="listen"> Listen </button>
+  <a href="type.html"><button id="well">well done</button></a>
+</div>
 </body>
 
 </html>
