--- a/assignment2/html/type.html
+++ b/assignment2/html/type.html
@@ -24,28 +24,19 @@
 
 <body>
 <div >
-  <form name="myForm"
-  onsubmit="return validateForm()" method="post">
-  Name: <input type="text" name="fname">
-  <input type="submit" value="Submit">
-  </form>
+  <button id="listen">Hear it Again</button>
+  <input id="input"></input>
+   <button id="submit">Submit</button>
 
-  <button id="done">Good Job!</button>
+   <a href="drag.html"><button id="done">Good Job!</button></a>
+
+
+  <!-- <button id="done">Good Job!</button> -->
 
 </div>
 
 
 
-
-
-
-
-
-<div id="bod">
-  <img id="test5" src="../img/kim.png">
-  <img src="../img/test.jpeg">
-  <img src="../img/test.jpeg">
-</div>
 
 
 </body>
