Adding images and cleaning up the pages
-Starting to improve the styling on the pages so they look less tragic

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -37,35 +37,37 @@ Description of project and purpose of HTML
 <div id="talk" class="talk">
 <!-- <img src="img/water.png" id="test1"> -->
 <p>As you go through this site, you will come across challenges that will help you to understand
-  the tip of the iceberg formally known as identity.</p>
+  the tip of the iceberg formally known as identity in relation to Indigenous Peoples in Canada.</p>
+
+  <p class="fine">*Please note that this website is in no ways speaking for or over Indigenous peoples but to begin to educate and use the web as a tool to reflect on certain
+    issues. This will be further explained once you have completed.</p>
 <a href="html/talk.html"><button id="typebutt">Start your journey</button></a>
 
+
+
+<section id="meter">
+<p class="fine"> This is your identity meter. Keep an eye on it as you go along as it reflects your</p>
+
+<span id="in">indigenous</span>
+<p class="fine"> and</p>
+<span id="leg">legal</span>
+<p class="fine">identity.</p>
+<img src="img/empty.png" width="100" height="100">
+<section>
 </div>
 
+<!-- <div>
+<p> This is your identity meter. Keep an eye on it as you go along as it reflects your</p>
 
+<span>indigenous</span>
+<p> and</p>
 
+<span>legal</span>
 
+<p>identity.</p>
 
-<div id="type" class="type">
+</div> -->
 
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-<div id="bod">
-  <img id="test5" src="img/kim.png">
-  <img src="img/test.jpeg">
-  <img src="img/test.jpeg">
-</div>
 
 
 </body>
