--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -32,6 +32,11 @@
   <div id="command">The nice thing to say when someone does something nice
   <button id="listen"> Listen </button>
   <a href="type.html"><button id="well">well done</button></a>
+  <img src="../img/empty.png" id="icon1" width="100" height="100">
+  <img src="../img/in1.png" id="icon2" width="100" height="100">
+
+
+
 </div>
 </body>
 
