--- a/assignment2/html/type.html
+++ b/assignment2/html/type.html
@@ -29,7 +29,8 @@
    <button id="submit">Submit</button>
 
    <a href="drag.html"><button id="done">Good Job!</button></a>
-
+   <img src="../img/in1.png" id="icon1" width="100" height="100">
+   <img src="../img/in2.png" id="icon2" width="100" height="100">
 
   <!-- <button id="done">Good Job!</button> -->
 
