Adding more layer to the pages
-Make sure to fix the spoken voice on the lose page

--- a/assignment2/html/drag.html
+++ b/assignment2/html/drag.html
@@ -24,11 +24,32 @@
 
 
 <body>
+  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-01.png" >
+  <img src="../img/fish-03.png" class="draggable">
+  <img src="../img/fish-02.png" >
+  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-04.png" class="draggable">
+  <div id="basket"></div>
 
-  <div id="command">The nice thing to say when someone does something nice</div>
-  <button> Listen </button>
-  <a href="type.html"><button id="well">well done!</button></a>
-  <img src="../img/water.png" class="draggable">
+  <div id="command">Collect the Fish<br>
+      <a href="lose.html"><button id="well">well done!</button></a>
+  </div>
+
+
+
+  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-01.png" >
+  <img src="../img/fish-03.png" class="draggable">
+  <img src="../img/fish-02.png" >
+  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-04.png" class="draggable">
+  <img src="../img/fish-05.png" class="draggable">
+  <img src="../img/fish-03.png" class="draggable">
+
+
 
 </body>
 
