--- a/assignment2/html/lose.html
+++ b/assignment2/html/lose.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Let's Hunt</title>
+  <title>Moving Forward?</title>
 
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
@@ -25,10 +25,10 @@
 
 <body>
 <div>
-  <input type="checkbox" name="animal" value="Cat" />Cats <br />
-  <input type="checkbox" name="animal" value="Dog" />Dogs<br />
-  <input type="checkbox" name="animal" value="Bird" />Birds<br />
-  <a href="drag.html"><button id="button">Good work!</button></a>
+  <input type="checkbox" name="animal" value="Cat" />Live in Paris for 6 Years <br />
+  <input type="checkbox" name="animal" value="Dog" />Vote for Canada's Prime Minister<br />
+  <input type="checkbox" name="animal" value="Bird" />Fall in Love with a American<br />
+  <a href=""><button id="button">Good work!</button></a>
 </div>
 </body>
 
