--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Say Something</title>
+  <title>Talking</title>
 
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
@@ -29,7 +29,7 @@
 
 <body>
 
-  <div id="command">The nice thing to say when someone does something nice
+  <div id="command">The thing to say when someone does something nice
   <button id="listen"> Listen </button>
   <a href="type.html"><button id="well">well done</button></a>
   <img src="../img/empty.png" id="icon1" width="100" height="100">
