--- a/assignment2/html/type.html
+++ b/assignment2/html/type.html
@@ -4,7 +4,7 @@
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Title of project</title>
+  <title>Writing</title>
 
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
@@ -28,7 +28,7 @@
   <input id="input"></input>
    <button id="submit">Submit</button>
 
-   <a href="drag.html"><button id="done">Good Job!</button></a>
+   <a href="gain.html"><button id="done">Good Job!</button></a>
    <img src="../img/in1.png" id="icon1" width="100" height="100">
    <img src="../img/in2.png" id="icon2" width="100" height="100">
 
