--- a/assignment2/html/gain.html
+++ b/assignment2/html/gain.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Let's Hunt</title>
+  <title>Status</title>
 
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
@@ -25,10 +25,12 @@
 
 <body>
 <div>
-  <input type="checkbox" name="animal" value="Cat" />Cats <br />
-  <input type="checkbox" name="animal" value="Dog" />Dogs<br />
-  <input type="checkbox" name="animal" value="Bird" />Birds<br />
-  <a href="drag.html"><button id="button">Good work!</button></a>
+  <input type="checkbox" name="animal" value="Cat" />Born in Canada<br /><br>
+  <input type="checkbox" name="animal" value="Dog" />Both Grandmothers married Indigenous<br />
+  <br>
+  <input type="checkbox" name="animal" value="Bird" />Live on the reserve<br />
+  <br>
+  <a href="drag.html"><button id="button">Congradualtions!</button></a>
 </div>
 </body>
 
