fixed the icons

--- a/assignment2/html/drag.html
+++ b/assignment2/html/drag.html
@@ -24,29 +24,34 @@
 
 
 <body>
-  <img src="../img/fish-01.png" class="draggable">
-  <img src="../img/fish-01.png" class="draggable">
-  <img src="../img/fish-01.png" >
-  <img src="../img/fish-03.png" class="draggable">
-  <img src="../img/fish-02.png" >
-  <img src="../img/fish-01.png" class="draggable">
-  <img src="../img/fish-04.png" class="draggable">
-  <div id="basket"></div>
+
+
 
   <div id="command">Collect the Fish<br>
       <a href="lose.html"><button id="well">well done!</button></a>
+      <!-- <img src="../img/both.png" id="icon1" width="100" height="100">
+      <img src="../img/bothfull.png" id="icon2" width="100" height="100"> -->
   </div>
+  <div id="basket"></div>
 
-
+  <img src="../img/both.png" id="icon1" width="100" height="100">
+  <img src="../img/bothfull.png" id="icon2" width="100" height="100">
+  <img src="../img/fish-01.png" >
+  <img src="../img/fish-06.png" class="draggable">
+  <img src="../img/fish-01.png" >
+  <img src="../img/fish-03.png" class="draggable">
+  <img src="../img/fish-02.png" >
+  <img src="../img/fish-04.png" class="draggable">
+  <img src="../img/fish-04.png" >
 
   <img src="../img/fish-01.png" class="draggable">
   <img src="../img/fish-01.png" class="draggable">
   <img src="../img/fish-01.png" >
   <img src="../img/fish-03.png" class="draggable">
   <img src="../img/fish-02.png" >
-  <img src="../img/fish-01.png" class="draggable">
+  <img src="../img/fish-06.png" class="draggable">
   <img src="../img/fish-04.png" class="draggable">
-  <img src="../img/fish-05.png" class="draggable">
+  <img src="../img/fish-05.png" >
   <img src="../img/fish-03.png" class="draggable">
 
 
