--- a/assignment2/html/gain.html
+++ b/assignment2/html/gain.html
@@ -31,6 +31,8 @@
   <input type="checkbox" name="animal" value="Bird" />Live on the reserve<br />
   <br>
   <a href="drag.html"><button id="button">Congradualtions!</button></a>
+  <img src="../img/in2.png" id="icon1" width="100" height="100">
+  <img src="../img/both.png" id="icon2" width="100" height="100">
 </div>
 </body>
 
