--- a/assignment2/html/lose.html
+++ b/assignment2/html/lose.html
@@ -15,6 +15,7 @@
 
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 
 
   <script src="../js/gain.js" content="text/javascript"></script>
@@ -28,7 +29,9 @@
   <input type="checkbox" name="animal" value="Cat" />Live in Paris for 6 Years <br />
   <input type="checkbox" name="animal" value="Dog" />Vote for Canada's Prime Minister<br />
   <input type="checkbox" name="animal" value="Bird" />Fall in Love with a American<br />
-  <a href=""><button id="button">Good work!</button></a>
+  <a href=""><button id="button">Oh Dear</button></a>
+  <img src="../img/bothfull.png" id="icon1" width="100" height="100">
+  <img src="../img/infull.png" id="icon2" width="100" height="100">
 </div>
 </body>
 
