--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -15,7 +15,7 @@ Description of project and purpose of HTML
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Title of project</title>
+  <title>Welcomet</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
