Linked the right java

--- a/assignment2/html/lose.html
+++ b/assignment2/html/lose.html
@@ -18,7 +18,7 @@
      <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 
 
-  <script src="../js/gain.js" content="text/javascript"></script>
+  <script src="../js/lose.js" content="text/javascript"></script>
 
 </head>
 
