Doing some last clean up
Adding hints and making sure to add code comments

--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -17,10 +17,8 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
   <!-- Uncomment next two lines to include jQuery UI -->
-  <!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
 
-  <!-- We include our own script file(s) -->
+
   <script src="../js/talk.js" content="text/javascript"></script>
 
 </head>
@@ -29,8 +27,11 @@
 
 <body>
 
-  <div id="command">The thing to say when someone does something nice
-  <button id="listen"> Listen </button>
+  <div id="command">Tainsi is the Cree word for Hello! Cmon give it a try!
+
+  <button id="listen"> Hint </button>
+    <div> <p> "Tan-Say"</p>
+
   <a href="type.html"><button id="well">well done</button></a>
   <img src="../img/empty.png" id="icon1" width="100" height="100">
   <img src="../img/in1.png" id="icon2" width="100" height="100">
