--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -15,7 +15,7 @@ Description of project and purpose of HTML
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Welcomet</title>
+  <title>Welcome</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -31,7 +31,8 @@ Description of project and purpose of HTML
 
 </head>
 
-<!-- Comment about the body of the HTML -->
+<!-- This is the disclaimer part of the site and also to get the user situated in what
+to expect as they proceed -->
 
 <body>
 <div id="talk" class="talk">
