--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -28,9 +28,9 @@
 <body>
 
   <div id="command">Tainsi is the Cree word for Hello! Cmon give it a try!
-
+<br>
   <button id="listen"> Hint </button>
-    <div> <p> "Tan-Say"</p>
+    <div id="hint"> <p> "Tan-Say"</p><div>
 
   <a href="type.html"><button id="well">well done</button></a>
   <img src="../img/empty.png" id="icon1" width="100" height="100">
