Fixed some small errors and cleaned up a bit
Also added in an essay page to clarify and explain the site to the user

--- a/assignment2/html/type.html
+++ b/assignment2/html/type.html
@@ -24,6 +24,8 @@
 
 <body>
 <div >
+  Type out the word below!
+  <p id="thank">Chimegwetch</p>
   <button id="listen">Hear it Again</button>
   <input id="input"></input>
    <button id="submit">Submit</button>
