--- a/assignment2/html/drag.html
+++ b/assignment2/html/drag.html
@@ -28,14 +28,15 @@
 
 
   <div id="command">Collect the Fish<br>
-      <a href="lose.html"><button id="well">well done!</button></a>
+      <a href="lose.html"><button id="well">Well Done!</button></a><br>
+      <img src="../img/both.png" id="icon1" width="100" height="100">
+      <img src="../img/bothfull.png" id="icon2" width="100" height="100">
       <!-- <img src="../img/both.png" id="icon1" width="100" height="100">
       <img src="../img/bothfull.png" id="icon2" width="100" height="100"> -->
   </div>
   <div id="basket"></div>
 
-  <img src="../img/both.png" id="icon1" width="100" height="100">
-  <img src="../img/bothfull.png" id="icon2" width="100" height="100">
+
   <img src="../img/fish-01.png" >
   <img src="../img/fish-06.png" class="draggable">
   <img src="../img/fish-01.png" >
