--- a/assignment2/html/lose.html
+++ b/assignment2/html/lose.html
@@ -29,7 +29,7 @@
   <input type="checkbox" name="animal" value="Cat" />Live in Paris for 6 Years <br />
   <input type="checkbox" name="animal" value="Dog" />Vote for Canada's Prime Minister<br />
   <input type="checkbox" name="animal" value="Bird" />Fall in Love with a American<br />
-  <a href=""><button id="button">Oh Dear</button></a>
+  <a href="essay.html"><button id="button">Oh Dear</button></a>
   <img src="../img/bothfull.png" id="icon1" width="100" height="100">
   <img src="../img/infull.png" id="icon2" width="100" height="100">
 </div>
