--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -32,7 +32,7 @@
   <button id="listen"> Hint </button>
     <div id="hint"> <p> "Tan-Say"</p><div>
 
-  <a href="type.html"><button id="well">well done</button></a>
+  <a href="type.html"><button id="well">Well Done</button></a>
   <img src="../img/empty.png" id="icon1" width="100" height="100">
   <img src="../img/in1.png" id="icon2" width="100" height="100">
 
