Trying to work out a way around the issue

--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -36,7 +36,7 @@
   <img src="../img/empty.png" id="icon1" width="100" height="100">
   <img src="../img/in1.png" id="icon2" width="100" height="100">
 
-
+<div id="success"> </div>
 
 </div>
 </body>
