Changed the html
-hopefully this fixes the hiding problem

--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -28,7 +28,9 @@
 <body>
 
   <div id="command">Tainsi is the Cree word for Hello! Cmon give it a try!
-<br>
+
+<div>
+
   <button id="listen"> Hint </button>
     <div id="hint"> <p> "Tan-Say"</p><div>
 
