fixed the html again

--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -29,11 +29,14 @@
 
   <div id="command">Tainsi is the Cree word for Hello! Cmon give it a try!
 
-<div>
+</div>
 
   <button id="listen"> Hint </button>
-    <div id="hint"> <p> "Tan-Say"</p><div>
+    <div id="hint">
 
+      <p> "Tan-Say"</p>
+    </div>
+<div>
   <a href="type.html"><button id="well">Well Done</button></a>
   <img src="../img/empty.png" id="icon1" width="100" height="100">
   <img src="../img/in1.png" id="icon2" width="100" height="100">
