Final touches and ReadMe

--- a/assignment2/html/talk.html
+++ b/assignment2/html/talk.html
@@ -26,7 +26,7 @@
 <!-- Comment about the body of the HTML -->
 
 <body>
-
+<div>
   <div id="command">Tainsi is the Cree word for Hello! Cmon give it a try!
 
 </div>
@@ -43,6 +43,7 @@
 
 <div id="success"> </div>
 
+</div>
 </div>
 </body>
 
